# optiland

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  agents.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: cheat_sheet.rst  environment.yml  glossary.rst  index.rst  installation.rst  learning_guide.rst  quickstart.rst  start_here.rst
docs/api/: api_core.rst  api_materials.rst
docs/api/materials/: materials.catalog.rst  materials.material_spec.rst  materials.registry.rst
docs/developers_guide/: analysis_framework.rst  configurable_backend.rst  deprecations.rst  extension_recipes.rst  geometry_overview.rst  interaction_models.rst  optimization_framework.rst  ray_overview.rst  requirements.rst  surface_overview.rst  tolerancing_framework.rst  visualization_framework.rst
docs/examples/: Double_Gauss_Surrogate_Model.ipynb  Misalignment_Prediction_Cooke_Triplet.ipynb  RL_aspheric_singlet.ipynb  Ray_Path_Failure_Classification_Model.ipynb  SR_GAN_for_wavefront_data.ipynb  Singlet_RF_Model_RMS_Spot_Size.ipynb  Tutorial_1a_Optiland_for_Beginners.ipynb  Tutorial_1b_Lens_Properties_and_Prescription.ipynb  Tutorial_1c_Material_Database_and_Catalogs.ipynb  Tutorial_1d_Material_Database.ipynb  Tutorial_1d_Saving_and_Loading.ipynb  Tutorial_2a_Tracing_and_Analyzing_Rays.ipynb  Tutorial_2b_Monte_Carlo_Raytracing.ipynb  Tutorial_2c_Aberration_Analyses.ipynb  Tutorial_2d_OPD_PSF_and_MTF_Calculations.ipynb  Tutorial_3a_Simple_Optimization.ipynb  Tutorial_3b_Advanced_Optimization.ipynb  Tutorial_3c_User_Defined_Optimization.ipynb  Tutorial_3d_Optimization_Case_Study_Cooke_Triplet.ipynb  Tutorial_3e_Glass_Expert_Categorical_Optimization.ipynb  Tutorial_4a_Tilts_Decenters_and_Asymmetric_Systems.ipynb  Tutorial_4b_Raytracing_Aspheres_and_Freeforms.ipynb  Tutorial_4c_Zoom_Lenses_and_Multi_Configuration.ipynb  Tutorial_4d_Lens_Catalogue_Integration.ipynb  Tutorial_4e_Lithographic_Projection_System.ipynb  Tutorial_4f_Three_Mirror_Anastigmat.ipynb  Tutorial_5a_Coatings_and_Multilayer_Stacks.ipynb  Tutorial_5b_Introduction_to_Polarization.ipynb  Tutorial_5c_Thin_Film_Optimization_and_Needle_Synthesis.ipynb  Tutorial_5d_Advanced_Thin_Film_Applications.ipynb  Tutorial_6a_Tolerancing_Sensitivity_Analysis.ipynb  Tutorial_6b_Monte_Carlo_Tolerancing_Analysis.ipynb  Tutorial_6c_Roughness_Scattering_and_Extended_Sources.ipynb  Tutorial_7a_Differentiable_Ray_Tracing_Hello_World.ipynb  Tutorial_7b_Differentiable_Lens_Optimization.ipynb  Tutorial_8a_Custom_Surface_Types.ipynb  Tutorial_8b_Custom_Coating_Types.ipynb  Tutorial_8c_Custom_Optimization_Algorithm.ipynb
docs/gallery/: optimization.rst  specialized_lenses.rst
docs/gallery/optimization/: reciprocal_radii_optimization.ipynb
docs/gallery/specialized_lenses/: projection_210fov.ipynb
optiland/: __init__.py  _types.py  coordinate_system.py  plugins.py  scatter.py  wavelength.py
optiland/analysis/: grid_distortion.py  intensity.py  irradiance.py  mtf_vs_field.py  pupil_aberration.py  ray_fan.py  through_focus.py
optiland/analysis/image_simulation/: distortion_warper.py  engine.py  psf_basis_generator.py  simulator.py
optiland/backend/: __init__.pyi  numpy_backend.py  torch_backend.py  utils.py
optiland/backend/linalg/: __init__.pyi
optiland/backend/numpy_backend/: __init__.py  creation.py  indexing.py  interpolation.py  linalg.py  math.py  misc.py  random.py
optiland/backend/torch_backend/: __init__.py  capabilities.py  config.py  creation.py  indexing.py  interpolation.py  linalg.py  misc.py  passthrough.py  random.py  reductions.py
optiland/database/: generate_csv_database.py
optiland/fields/field_types/: angle.py
optiland/fileio/: common.py
optiland/geometries/: newton_raphson.py  odd_asphere.py  standard.py
optiland/geometries/forbes/: geometry.py  qpoly.py
optiland/geometries/nurbs/: nurbs_basis_functions.py  nurbs_fitting.py
optiland/interactions/: thin_lens_interaction_model.py
optiland/materials/: __init__.py  base.py  catalog.py  material.py  material_spec.py  material_utils.py  registry.py  warnings.py
optiland/ml/: __init__.py  adjoint.py
optiland/optic/: optic_updater.py
optiland/optimization/operand/: operand_manager.py
optiland/optimization/optimizer/: live_plotter.py
optiland/optimization/variable/: variable_manager.py
optiland/phase/: interpolators.py
optiland/physical_apertures/: radial.py
optiland/prescription/: prescription.py
optiland/rays/ray_aiming/: iterative.py  robust.py
optiland/raytrace/: __init__.py  base.py  paraxial_ray_tracer.py  real_ray_tracer.py
optiland/samples/: eyepieces.py  infrared.py  lithography.py  microscopes.py  miscellaneous.py  objectives.py  simple.py  telescopes.py
optiland/surfaces/factories/: geometry_configs.py  geometry_factory.py  material_factory.py
optiland/visualization/info/: providers.py
optiland/visualization/system/: optic_viewer.py
optiland/wavefront/: opd.py  strategy.py
optiland_gui/: viewer_panel.py
tests/: conftest.py  test_analysis.py  test_coordinate_system.py  test_flip_geometries.py  test_interpolators_phase.py  test_live_optimization_plotter.py  test_materials.py  test_materials_pr1.py  test_materials_pr2.py  test_optic_deprecated.py  test_ray_aiming.py  test_thin_lens_interaction_model.py  test_wavefront_strategy.py
tests/regression/: golden_values.py  systems.py  test_golden_snapshots.py
tests/regression/fixtures/: coated_doublet.json  doublet.json  forbes_q2d_singlet.json  wide_fov.json
tests/test_fileio/: test_zemax_writer.py
(+17 files in other folders)
