[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optiland"
version = "0.6.0"
authors = [{ name = "Kramer Harrison", email = "kdanielharrison@gmail.com" }]
description = "Open Source Optical Design in Python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pyyaml",
    "matplotlib",
    "vtk",
    "tabulate",
    "numba>=0.60.0",
    "requests",
    "seaborn",
    "typing-extensions>=4.1.0",
]
license = { text = "MIT License" }

[project.optional-dependencies]
prescription-console = ["rich>=13.0"]
prescription-pdf = ["reportlab>=4.0"]
prescription = ["rich>=13.0", "reportlab>=4.0"]
gui = ["PySide6", "qtconsole"]
torch = ["torch"]

[project.urls]
Homepage = "https://github.com/optiland/optiland"
Repository = "https://github.com/optiland/optiland"
Documentation = "https://optiland.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/optiland/optiland/issues"

[project.scripts]
optiland = "optiland_gui.run_gui:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["optiland", "optiland_gui"]

[tool.hatch.metadata.files]
"optiland/database" = ["*.csv", "*.yml", "**/*.yml", "*.npy"]

[tool.ruff]
line-length = 88
exclude = ["tests", "docs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "PYI", # pyright
    "TC",  # type-checking
]
exclude = ["*.ipynb"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "codecov>=2.1.13",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--dist loadfile"
