[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optiland"
version = "0.6.1"
authors = [{ name = "Kramer Harrison", email = "kdanielharrison@gmail.com" }]
description = "Open Source Optical Design in Python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pyyaml",
    "matplotlib",
    "vtk",
    "tabulate",
    "numba>=0.60.0",
    "requests",
    "seaborn",
    "typing-extensions>=4.1.0",
]
license = { text = "MIT License" }

[project.optional-dependencies]
prescription-console = ["rich>=13.0"]
prescription-pdf = ["reportlab>=4.0"]
prescription = ["rich>=13.0", "reportlab>=4.0"]
gui = ["PySide6", "qtconsole"]
torch = ["torch"]

[project.urls]
Homepage = "https://github.com/optiland/optiland"
Repository = "https://github.com/optiland/optiland"
Documentation = "https://optiland.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/optiland/optiland/issues"

[project.scripts]
optiland = "optiland_gui.run_gui:main"

# Third-party plugin discovery (Phase 0.5, SPEC_Tech_Debt_20260705.md). A
# plugin package declares one of these groups pointing at a zero-argument
# callable that registers itself against the relevant Optiland registry; see
# optiland/plugins.py and CONTRIBUTING.md for the "add a new X" walkthrough.
[project.entry-points."optiland.surfaces"]
[project.entry-points."optiland.materials"]
[project.entry-points."optiland.analyses"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["optiland", "optiland_gui"]

[tool.hatch.metadata.files]
"optiland/database" = ["*.csv", "*.yml", "**/*.yml", "*.npy"]

[tool.ruff]
line-length = 88
exclude = ["tests", "docs", "optiland_gui/resources/resources_rc.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "PYI", # pyright
    "TC",  # type-checking
    # pydocstyle: missing-docstring only, scoped to top-level public API
    # (module/class/function). D102 (methods), D105 (magic methods), and
    # D107 (__init__) are intentionally excluded — enabling them today would
    # flag ~480 pre-existing internals, which is exactly the one-time fixup
    # burden constraint 4 rules out. D2xx/D4xx (content/format) stay off too.
    "D100", # undocumented-public-module
    "D101", # undocumented-public-class
    "D103", # undocumented-public-function
]
exclude = ["*.ipynb"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D101", "D103"]
"docs/**" = ["D100", "D101", "D103"]
# Standalone debug/reproduction scripts, not part of the package API.
"optiland/scripts/**" = ["D100", "D101", "D103"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "codecov>=2.1.13",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.6",
    "mypy>=1.13",
    "vulture>=2.13", # dead-code audits (see CONTRIBUTING.md); not run in CI
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--dist loadfile"

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true
exclude = ["^tests/", "^docs/", "^optiland_gui/"]

[[tool.mypy.overrides]]
module = "optiland.wavelength"
strict = true
